Bug 350425 - KMail actions belong to different components in shortcut configuration
Summary: KMail actions belong to different components in shortcut configuration
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: Git (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-20 20:13 UTC by Alexander Potashev
Modified: 2015-07-21 05:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2015-07-20 20:13:16 UTC
In "Settings -> Configure Shortcuts...", actions are divided in two groups: "kmail" and "KMail". These names are not descriptive on how they are different. Please rename both to "KMail" or use some meaningful grouping.

Reproducible: Always
Comment 1 Laurent Montel 2015-07-21 05:08:42 UTC
Git commit c6a1b3bb46239564140b1f1273b053f0a7aaf5ee by Montel Laurent.
Committed on 21/07/2015 at 05:08.
Pushed by mlaurent into branch 'master'.

Fix Bug 350425 - KMail actions belong to different components in shortcut configuration

M  +1    -1    kmail/kmmainwin.cpp

http://commits.kde.org/kdepim/c6a1b3bb46239564140b1f1273b053f0a7aaf5ee