Fix Bug 350425 - KMail actions belong to different components in shortcut configuration

BUG: 350425